Fixed header size overflow on mobile

--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@ body {
     gap: 4px;
     align-items: center;
 }
+#top-navbar {
+    width: 100%;
+    max-width: 100vw;
+}
 #logo img {
     width: 2.5rem; /* 40px */
     height: 2.5rem;
